# Compiler

cpp/: .gitignore  CMakeLists.txt  README.md
cpp/src/: .clang-format  main.cc  runtime.c
cpp/src/backend/: flow.h  graph.h  interference.h  liveness.h  regalloc.h
cpp/src/backend/x86/: x86_assem.cc  x86_function.cc  x86_function.h  x86_instr.cc  x86_instr.h  x86_prg.h  x86_registers.cc  x86_registers.h  x86_target.cc  x86_target.h
cpp/src/minijava/: ast.h  error.cc  error.h  exp.cc  exp.h  lexer.l  parser.y  parser_context.cc  parser_context.h  stm.cc  stm.h  symbol.cc  symbol.h  type.cc  type.h  typecheck.cc  typecheck.h
cpp/src/test/: test_compilation.py  test_compile_error.py  test_runtime_error.py
cpp/src/util/: .clang-format  ordered_map.h
java/: .gitignore  README.md  build.gradle
java/src/main/cup/minijava/parser/: Parser.cup
java/src/main/java/minijava/: Main.java
java/src/main/java/minijava/analysis/: SymbolTable.java  TypeCheckException.java  TypeChecking.java
java/src/main/java/minijava/backend/: CodeGenerator.java  MachineInstruction.java  Platform.java
java/src/main/java/minijava/backend/i386/: I386CodeGenerator.java  I386Function.java  I386Instruction.java  I386Platform.java  I386Prg.java  InstrBinary.java  InstrJump.java  InstrLabel.java  InstrNullary.java  InstrUnary.java  Muncher.java  Operand.java  Registers.java
java/src/main/java/minijava/backend/regalloc/: FlowGraph.java  InterferenceGraph.java  Liveness.java  RegAlloc.java
java/src/main/java/minijava/syntax/: ExpArrayLength.java  ExpBinOp.java  ExpId.java  ExpIntConst.java  ExpInvoke.java  ExpTrue.java  ExpVisitor.java  PrettyPrint.java  TypeVisitor.java
java/src/main/java/minijava/util/: DirectedGraph.java  Pair.java
java/src/main/jflex/minijava/parser/: Lexer.jflex
java/src/test/java/minijava/: CompileTest.java  TestSuite.java
rust/: .gitignore  Cargo.toml  README.md
rust/src/: collections.rs  error.rs  ident.rs  main.rs  naming_context.rs
rust/src/backend/: flow.rs  graph.rs  interference.rs  liveness.rs  mod.rs  platform.rs  regalloc.rs  tests.rs  x86tests.rs
rust/src/backend/x86/: display.rs  mod.rs  muncher.rs  x86function.rs  x86instr.rs  x86platform.rs  x86prg.rs  x86register.rs
rust/src/minijava/: ast.rs  lalrparser.lalrpop  lexer.rs  mod.rs  parser.rs  symbols.rs  typecheck.rs
rust/test/: Binding.java  Brainfuck.java  Echo.java  EulerTest.java  FactorialMem.java  FibInteger.java  GameOfLifeAnim.java  MandelbrotWithSimpleDiv.java  RaytraceTrans.java
testcases/Large/: Gunzip.in
testcases/Medium/: Fmt.in  Fmt.java  HeapSort.java  HeapSort.s
testcases/ShouldFail/ParseErrors/: BrokenLex3.java
testcases/ShouldFail/TypeErrors/: PrintArgs.java  Throws1.java  Throws2.java  Throws3.java  UnknownType1.java  UnknownType2.java
testcases/Small/: Arith.java  Circular.java  ShortCutAnd2.java
